@@ -2,4 +2,6 @@ class Tag < ActiveRecord::Base
   has_many :taggings
   has_many :taggables, :through => :taggings
   has_one  :tagging
+
+  has_many :tagged_posts, :through => :taggings, :source => :taggable, :source_type => 'Post'
 end
